Student1.ParentPortal.Web/clientapp/css/StyleSheet.css
:root {
    --text-color-light: #678098;
    --text-color-dark: #454545;
}

html { scroll-behavior: smooth; }
html, body {
    height: 100%;
}
body {
    /*padding-top: 5rem;*/
    font-family: 'Poppins', sans-serif;
    background: #F1F1F1;
    background: #e0e0e0;
    color: #678098;
}

h1, h2, h3, h4, h5, h6 {
    color: #454545;
    font-weight: 600;
}
main {
    flex: 1;
}

h1 { font-size: 1.75em; margin-bottom: 0.8em; }
h2 { font-size: 1.5em; }
h3 { font-size: 1.25em; }
h4 { font-size: 1.0em; }
h5 { font-size: 0.75em; }
h6 { font-size: 0.5em; }

h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
    font-weight: 400;
    font-size: 0.7em;
}

.app-prevent-overflow {
    word-wrap: normal;
}

/* Colors */
.primary { background-color: #9068be !important; color: white; }
.secondary { background-color: #978DED !important; color: white; }
.success { background-color: #6ed3cf !important; color: white; }
.info { background-color: #F5A3E3 !important; color: white; }
.warning { background-color: #fae596 !important; color: white; }
.danger  { background-color: #c43235 !important; color: white; }
.bluestar { background-color:#2196f3 !important; color: white !important; }

/*Indicator Icons*/
.icon-round-border {
    border: 2px solid;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    width: 34px;
    height: 34px;
    border-radius: 50%;    
}
.icon-round-border-large {
    border: 4px solid;
    width: 82px;
    height: 82px;
}
.bad-icon-round { color: #c43235; }
.warning-icon-round { color: #ffa000; }
.good-icon-round { color: #4caf50;  }
.great-icon-round { color: #2196f3; }

/* Links */
a { color: #03a9f4; }
a:link { color: #03a9f4; }
a:visited { color: #03a9f4; }
a:hover { color: #ff9800; }
a:active { color: #ff9800; }
a.btn.btn-primary { color: white; }

/* Buttons */
.btn-disabled { color: #9e9e9e!important; border-color: #e0e0e0;}
.btn-rounded { border-radius: 60px; }
.btn-outline-primary { color: #03a9f4!important; border-color: #03a9f4;}
.btn-outline-primary:hover { color:white!important; background-color: #03a9f4; border-color: #03a9f4;}
.btn-outline-primary:focus, .btn-outline-primary.focus { box-shadow: 0 0 0 .2rem #81d4fa }
.btn-outline-info { color: #9c27b0!important; border-color: #9c27b0; }
.btn-outline-info:hover { color:white!important; background-color: #9c27b0; border-color: #9c27b0;}
.btn-outline-info:focus, .btn-outline-info.focus { box-shadow: 0 0 0 .2rem #ce93d8 }
.btn-outline-secondary { color: #8bc34a!important; border-color: #8bc34a; }
.btn-outline-secondary:hover { color:white!important; background-color: #8bc34a; border-color: #8bc34a;}
.btn-outline-secondary:focus, .btn-outline-secondary.focus { box-shadow: 0 0 0 .2rem #c5e1a5 }
.btn-outline-mail { border-radius:50%; width: 40px; height: 40px; color: #9e9e9e!important; border-color: #9e9e9e; position: relative; }
.btn-outline-mail:hover { color:white!important; background-color: #03a9f4; border-color: #03a9f4;}
.btn-outline-mail:focus, .btn-outline-mail.focus { box-shadow: 0 0 0 .2rem #81d4fa }
.btn-outline-notifications { border-radius:50%; width: 40px; height: 40px; color: #9e9e9e!important; border-color: #9e9e9e; position: relative; }
.btn-outline-notifications:hover { color:white!important; background-color: #ef6c00; border-color: #ef6c00;}
.btn-outline-notifications:focus, .btn-outline-notifications.focus { box-shadow: 0 0 0 .2rem #c5e1a5 }
.btn-fill-help { border-radius:50%; width: 40px; height: 40px; background-color: #03a9f4; border-color: #03a9f4; position: relative; color: white !important; }
.btn-fill-help:hover { background-color: #0277bd; }
.btn-fill-help:focus, .btn-fill-help.focus { box-shadow: 0 0 0 .2rem #29b6f6 }
.btn-fill-unread { border-radius:50%; width: 40px; height: 40px; background-color: #00bcd4; border-color: #00bcd4; position: relative; color: white !important; }
.btn-fill-unread:hover { background-color: #00838f; }
.btn-fill-unread:focus, .btn-fill-unread.focus { box-shadow: 0 0 0 .2rem #26c6da }
.btn-info { background-color: #03a9f4 !important; }
.btn-info:hover { background-color: #0277bd !important; }
.btn-info:focus, .btn-info.focus { box-shadow: 0 0 0 .2rem #29b6f6 }
.btn-fill-search { float:right; height: 46px; background-color: #03a9f4; border-color: #03a9f4; position: relative; color: white !important; }
.btn-fill-search:hover { background-color: #0277bd; }
.btn-fill-search:focus, .btn-fill-search.focus { box-shadow: 0 0 0 .2rem #29b6f6 }
.btn-round-small { border-radius:50%; width: 25px; height: 25px; color: #03a9f4!important; border: 2px solid #03a9f4; position: relative; }
.btn-round-small:hover { color:white!important; background-color: #03a9f4; border-color: #03a9f4;}
.btn-round-small:focus { box-shadow: 0 0 0 .2rem #81d4fa }

/*Nav bar styles*/
.navbar-light, bg-light {
    background-color: #fff !important;
}
.dropdown-menu a i { margin-right: 5px; }

/*Forms, elements and validation*/
.form-control {
    background: #F1F1F1;
    color: #000000;
    min-height: 40px;
    height: 45px;
    box-shadow: none;
    border-radius: 5px;
}

/* Invalid styles*/
.form-group.invalid label {
    font-weight:bold;
    color: #c62828;
}

.form-group.invalid input, .form-group.invalid select,
.form-group.invalid textarea {
    border: 2px solid #c62828;
}

.form-group.invalid .form-feedback {
    font-size: 0.8em;
    color: #c62828;
}

input.ng-invalid, textarea.ng-invalid {
    border: 2px solid #c62828;
}

input.form-control.ng-touched.ng-empty.ng-invalid.ng-invalid-required {
    border-color: #c62828;
    box-shadow: 0 0 0 0.1rem rgba(255, 0, 0, 0.35);
}

textarea.form-control.ng-touched.ng-empty.ng-invalid.ng-invalid-required {
    border-color: #c62828;
    box-shadow: 0 0 0 0.1rem rgba(255, 0, 0, 0.35);
}

.form-control.ng-pristine:focus {
    border-color: #80bdff;
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

input.ng-pristine, textarea.ng-pristine {
    border: 1px solid #ced4da;
}
/* ... */

